/**
 * Trigger Tests for azure-validate
 * 
 * Tests that verify the skill triggers on appropriate prompts
 * and does NOT trigger on unrelated prompts.
 */

import { TriggerMatcher } from "../utils/trigger-matcher";
import { loadSkill, LoadedSkill } from "../utils/skill-loader";

const SKILL_NAME = "azure-validate";

describe(`${SKILL_NAME} - Trigger Tests`, () => {
  let triggerMatcher: TriggerMatcher;
  let skill: LoadedSkill;

  beforeAll(async () => {
    skill = await loadSkill(SKILL_NAME);
    triggerMatcher = new TriggerMatcher(skill);
  });

  describe("Should Trigger", () => {
    const shouldTriggerPrompts: string[] = [
      // Deployment readiness checks
      "Check if my app is ready to deploy to Azure",
      "Validate my azure.yaml configuration",
      "Run preflight checks before Azure deployment",
      "Troubleshoot deployment errors",
      "Verify my infrastructure configuration before deploying",
      "Is my app ready for Azure deployment?",
      "Validate my Bicep configuration",
      // Preflight validation
      "Validate my Bicep template before deploying to Azure",
      "Check my deployment permissions before running azd up",
      "Verify my Bicep files are valid before provisioning",
      "Run pre-deployment validation checks on my Azure infrastructure",
      // Azure Functions validation
      "Validate my Azure Functions app before deploying",
      "Check if my function app is ready for Azure deployment",
      "Validate my serverless function deployment configuration",
      // RBAC role verification
      "Check the RBAC role assignments in my Bicep before deploying",
      "Verify managed identity permissions in my infrastructure code",
      "Review role assignments in my Terraform before Azure deployment",
      // Container Apps / containerized validation
      "Validate my containerized app before deploying to Azure Container Apps",
      "Check if my container app is ready to deploy",
      "Validate docker build before deploying to Container Apps",
      "Run validation checks for my containerized web application",
      "Verify my Container Apps deployment configuration",
      // Policy compliance checks
      "Check my Bicep against Azure Policy",
      "Run policy compliance check before deployment",
      "Check policy restrictions for my Bicep template",
      "Azure policy bicep validation",
    ];

    test.each(shouldTriggerPrompts)(
      'triggers on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(true);
      }
    );
  });

  describe("Should NOT Trigger", () => {
    const shouldNotTriggerPrompts: string[] = [
      "What is the weather today?",
      "Help me write a poem",
      "Explain quantum computing",
      "Help me with AWS S3 bucket naming",
      "What is the best pizza topping?",
      "How do I use Docker?",
    ];

    test.each(shouldNotTriggerPrompts)(
      'does not trigger on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(false);
      }
    );
  });

  describe("Trigger Keywords Snapshot", () => {
    test("skill keywords match snapshot", () => {
      expect(triggerMatcher.getKeywords()).toMatchSnapshot();
    });

    test("skill description triggers match snapshot", () => {
      expect({
        name: skill.metadata.name,
        description: skill.metadata.description,
        extractedKeywords: triggerMatcher.getKeywords()
      }).toMatchSnapshot();
    });
  });

  describe("Edge Cases", () => {
    test("handles empty prompt", () => {
      const result = triggerMatcher.shouldTrigger("");
      expect(result.triggered).toBe(false);
    });

    test("handles very long prompt", () => {
      const longPrompt = "Azure validate deployment ready ".repeat(100);
      const result = triggerMatcher.shouldTrigger(longPrompt);
      expect(typeof result.triggered).toBe("boolean");
    });

    test("is case insensitive for Azure terms", () => {
      const result1 = triggerMatcher.shouldTrigger("VALIDATE AZURE DEPLOYMENT");
      const result2 = triggerMatcher.shouldTrigger("validate azure deployment");
      expect(result1.triggered).toBe(result2.triggered);
    });
  });
});
