// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Validate Azure deployment readiness after azure-prepare. Check azure.yaml, Bicep or Terraform, what-if previews, RBAC, managed identities, policy compliance, and prerequisites before azure-deploy. WHEN: "check deployment readiness", "validate my azure.yaml", "validate my Bicep template before deploying to Azure", "run a what-if analysis", "verify RBAC role assignments", "check policy compliance before deployment".",
  "extractedKeywords": [
    "after",
    "analysis",
    "assignments",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "before",
    "bicep",
    "check",
    "compliance",
    "deploy",
    "deploying",
    "deployment",
    "function",
    "identities",
    "managed",
    "mcp",
    "policy",
    "prerequisites",
    "previews",
    "rbac",
    "readiness",
    "role",
    "storage",
    "template",
    "terraform",
    "validate",
    "validation",
    "verify",
    "what-if",
    "when",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "after",
  "analysis",
  "assignments",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "before",
  "bicep",
  "check",
  "compliance",
  "deploy",
  "deploying",
  "deployment",
  "function",
  "identities",
  "managed",
  "mcp",
  "policy",
  "prerequisites",
  "previews",
  "rbac",
  "readiness",
  "role",
  "storage",
  "template",
  "terraform",
  "validate",
  "validation",
  "verify",
  "what-if",
  "when",
  "yaml",
]
`;
